version/0.22/_sources/api/solver/_autosummary/settings/acoustic_wave_model.rst.txt
:orphan:

.. _acoustic_wave_model:

acoustic_wave_model
===================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.acoustic_wave_model.acoustic_wave_model
    :show-inheritance:

.. rubric:: Included in:

=============================   =======================

Parent                                          Summary

=============================   =======================
:ref:`momentum <momentum>`          Help not available.

:ref:`momentum <momentum_1>`        Help not available.

:ref:`momentum <momentum_2>`        Help not available.

:ref:`momentum <momentum_3>`        Help not available.

:ref:`momentum <momentum_6>`        Help not available.

:ref:`momentum <momentum_8>`        Help not available.

:ref:`momentum <momentum_9>`        Help not available.

:ref:`momentum <momentum_10>`       Help not available.

=============================   =======================

