version/0.28/_sources/api/solver/_autosummary/settings/acoustic_wave_model.rst.txt
:orphan:

.. _acoustic_wave_model:

acoustic_wave_model
===================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.acoustic_wave_model
    :show-inheritance:

.. rubric:: Included in:

================================   ==========================================================

Parent                                                                                Summary

================================   ==========================================================
:ref:`momentum <momentum>`             Allows to change momentum model variables or settings.

:ref:`momentum_1 <momentum_1>`         Allows to change momentum model variables or settings.

:ref:`momentum_2 <momentum_2>`         Allows to change momentum model variables or settings.

:ref:`momentum_3 <momentum_3>`         Allows to change momentum model variables or settings.

:ref:`momentum_6 <momentum_6>`         Allows to change momentum model variables or settings.

:ref:`momentum_8 <momentum_8>`         Allows to change momentum model variables or settings.

:ref:`momentum_9 <momentum_9>`         Allows to change momentum model variables or settings.

:ref:`momentum_10 <momentum_10>`       Allows to change momentum model variables or settings.

================================   ==========================================================

